--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@
 /src/programmers/dev_matching_2020_backend
 /src/programmers/재시도_안한_문제
 /src/programmers/안풀_문제
+/src/programmers/또다시_풀어볼_문제
 kotline-practice.iml
